<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="start|top"
        android:hint="@string/editText1"
        android:inputType="textMultiLine"
        android:minLines="3" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="start|top"
        android:hint="@string/editText2"
        android:inputType="textMultiLine"
        android:minLines="3" />

    <Button
        android:id="@+id/button_Compare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_compare"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</LinearLayout>
